--- a/WearDataVBA/WearDataVBA.vbproj
+++ b/WearDataVBA/WearDataVBA.vbproj
@@ -63,7 +63,9 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Module1-Compare.vb" />
+    <Compile Include="Module1.vb" />
+    <Compile Include="Module2-Compare.vb" />
+    <Compile Include="Module2.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
